--- a/images/README
+++ b/images/README
@@ -1,2 +1,2 @@
-In this folder are reported 3 on 171 Illegal Abandoned Waste Sites (IAWSs).
-We have chosen, as examples, only these three images due to privacy issues.
+In this folder are reported 4 on 171 Illegal Abandoned Waste Sites (IAWSs) imeges.
+We have chosen, as examples, only these images due to privacy issues.
